# in5060-assignment-3

./: .gitignore  convert_xdf_to_json.py  flake.nix  notebook.html  notebook.ipynb  notebook.py  pyproject.toml  xdf_types.py
.ipynb_checkpoints/: notebook-checkpoint.ipynb
data/: questionnaire_data-561422-2025-11-07-1643.csv  questionnaire_data-561422-2025-11-17-1240.csv  questionnaire_data-561422-2025-11-21-1620.csv
data/sub-001/: sub-001_ses-_task-_run-001.json
data/sub-002/: sub-002_ses-_task-_run-001.json
data/sub-003/: sub-003_ses-_task-_run-001.json
data/sub-004/: sub-004_ses-_task-BBT_run-001.json  sub-004_ses-_task-JTHFT_run-001.json  sub-004_ses-_task-JTHFT_run-001_practice.json
data/sub-005/: sub-005_ses-_task-_run-001.json
data/sub-006/: sub-006_ses-_task-_run-001.json
data/sub-007/: sub-007_ses-_task-_run-001.json
data/sub-008/: sub-008_ses-_task-_run-001.json
data/sub-009/: sub-009_ses-_task-_run-001.json
data/sub-010/: sub-010_ses-_task-_run-001.json
data/sub-011/: sub-011_ses-_task-_run-001.json
data/sub-012/: sub-012_ses-_task-_run-001.json
data/sub-013/: sub-013_ses-_task-_run-001.json
data/sub-014/: sub-014_ses-_task-_run-001.json
data/sub-015/: sub-015_ses-_task-_run-001.json
data/sub-016/: sub-016_ses-_task-_run-001.json
data/sub-017/: sub-017_ses-_task-_run-001.json
data/sub-018/: sub-018_ses-_task-_run-001.json
data/sub-019/: sub-019_ses-_task-_run-001.json
data/sub-020/: sub-020_ses-_task-_run-001.json
data/sub-021/: sub-021_ses-_task-_run-001.json
data/sub-022/: sub-022_ses-_task-_run-001.json
(+12 files in other folders)
