[project]
name = "in5060-assignemnt-3"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pingouin>=0.5.5",
    "pydantic>=2.12.4",
    "pysimdjson>=7.0.2",
    "pyxdf>=1.17.0",
    "rich[jupyter]>=14.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
